--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>OSC</groupId>
+		<artifactId>ShoppingCartOnline</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>OSC</groupId>
 	<artifactId>config-server</artifactId>
@@ -16,7 +15,7 @@
 	<properties>
 		<java.version>17</java.version>
 <!--		<spring-cloud.version>2022.0.4</spring-cloud.version>-->
-		<spring-cloud.version>2021.0.4</spring-cloud.version>
+<!--		<spring-cloud.version>2021.0.5</spring-cloud.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -53,17 +52,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<build>
 		<plugins>
