--- a/pom.xml
+++ b/pom.xml
@@ -20,21 +20,24 @@
         <module>product-service</module>
         <module>service-discovery</module>
         <module>config-server</module>
-<!--        <module>api-gateway</module>-->
         <module>api-gateway</module>
-<!--        <module>movie-service</module>-->
-<!--        <module>series-service</module>-->
-<!--        <module>rating-service</module>-->
-<!--        <module>comment-service</module>-->
-<!--        <module>metadata-service</module>-->
-<!--        <module>favorite-service</module>-->
+        <module>payment-service</module>
+        <module>cart-service</module>
     </modules>
 
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
     </properties>
-
+<dependencies>
+    <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-resolver-dns-native-macos</artifactId>
+        <version>4.1.80.Final</version>
+        <classifier>osx-aarch_64</classifier>
+        <scope>runtime</scope>
+    </dependency>
+</dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
