commit: + SMTP service done.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -18,4 +18,11 @@ eureka.client.serviceUrl.registerWithEureka=true
 spring.cloud.discovery.enabled=true
 spring.main.allow-bean-definition-overriding=true
 
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedOrigins=*
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedMethods[0]=GET
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedMethods[1]=POST
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedMethods[2]=PUT
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedMethods[3]=DELETE
+
+
 
