commit: + Testing role Vendor/Customer done.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>api-gateway</module>
         <module>payment-service</module>
         <module>smtp-service</module>
+<!--        <module>user-service</module>-->
     </modules>
 
     <properties>
