--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.application.name=api-gateway
 spring.main.web-application-type=reactive
 server.port=8889
-logging.level.root=trace
-spring.zipkin.base-url=http://localhost:9411
+#logging.level.root=trace
+#spring.zipkin.base-url=http://localhost:9411
 eureka.instance.leaseRenewalIntervalInSeconds = 10
 eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
 
@@ -17,7 +17,11 @@ eureka.client.serviceUrl.registerWithEureka=true
 
 spring.cloud.discovery.enabled=true
 spring.main.allow-bean-definition-overriding=true
-
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+spring.cloud.gateway.default-filters[1]=AddResponseHeader= Access-Control-Allow-Origin,*
+spring.cloud.gateway.filter.add-request-header.enabled=true
+#
 #spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedOrigins=*
 #spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedMethods[0]=GET
 #spring.cloud.gateway.globalcors.corsConfigurations['[/**]'.allowedMethods[1]=POST
