--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,10 +5,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jackson.date-format=yyyy-MM-dd
 
 spring.application.name=product-service
-#spring.main.web-application-type=reactive
 server.port=0
 logging.level.root=trace
 spring.zipkin.base-url=http://localhost:9411
